# polyblock-tui

./: .gitignore  Cargo.toml
src/: app.rs  help.rs  input.rs  instance.rs  io.rs  main.rs  paths.rs  ui.rs
src/forge/: installer.rs  manifest.rs  mod.rs
src/minecraft/: launcher.rs  manifest.rs  mod.rs
src/mods/: curse.rs  file_info.rs  mod.rs
src/routes/: add_forge.rs  change_version.rs  common.rs  home.rs  instance_menu.rs  mod.rs  new_instance.rs  remove_instance.rs  rename_instance.rs
src/util/: events.rs  java.rs  mod.rs  progress.rs
src/view/: common.rs  home.rs  instance_menu.rs  mod.rs  new_instance.rs  remove_instance.rs  rename_instance.rs
