[package]
name = "polyblock-tui"
version = "0.1.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.9.1", features = ["crossterm"], default-features = false }
anyhow = "1.0.28"
crossterm = "0.17"
dirs = "2.0.2"
backtrace = "0.3.46"
tokio = { version = "0.2.18", features = ["full"] }
