[package]
name = "polyblock-tui"
version = "0.1.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.9.1", features = ["crossterm"], default-features = false }
anyhow = "1.0.28"
crossterm = "0.17"
structopt = "0.3.13"
directories = "2.0.2"
tokio = { version = "0.2.18", features = ["full"] }
lazy_static = "1.4.0"
which = { version = "3.1.1", default-features = false }
zip = "0.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
reqwest = { version = "0.10.4", features = ["json", "gzip"] }
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
toml = "0.5.6"
log = "0.4.8"
unicode-width = "0.1.7"
array_tool = "1.0.3"
sha-1 = "0.8.2"
data-encoding = "2.2.0"
notify = "4.0.15"
env_logger = "0.7.1"
futures = "0.3.4"
better-panic = "0.2.0"
bytes = "0.5.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.7"
